[tool.poetry]
name = "Aiogram Template"
version = "0.1.0"
description = ""
authors = ["CostGem"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.24"
asyncpg = "^0.29.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
termcolor = "^2.4.0"
fluentogram = "^1.1.6"
alembic = "^1.13.1"
greenlet = "^3.0.3"
aiolimiter = "^1.1.0"
cachetools = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
